fix bugs with JAR file